Fix podcast art grid margins on tablet view

--- a/styles/podcast.less
+++ b/styles/podcast.less
@@ -34,7 +34,7 @@
       margin-right: 6%;
       margin-bottom: 6%;
 
-      &:nth-child(2n) {
+      &:nth-of-type(2n) {
         margin-right: 0;
       }
     }
